--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --font-inter: 'Inter', sans-serif;
+}
+
 .translate-z-0 {
   transform: translateZ(0px);
 }
-.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-.swiper-pagination-horizontal.swiper-pagination-bullets
-  .swiper-pagination-bullet {
+
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   background-color: #f13024;
 }
 
@@ -20,31 +24,41 @@
 
 @layer base {
   body {
+    @apply bg-background text-foreground;
+    font-family: var(--font-inter);
     @apply bg-secondary overflow-hidden leading-relaxed;
   }
+
   .page {
     @apply w-full h-screen overflow-hidden;
   }
+
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
   }
+
   .h2 {
     @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
   }
+
   p {
     @apply leading-[1.8] text-white/60 font-light;
   }
+
   .btn,
   .input {
     @apply h-[52px];
   }
+
   .input {
     @apply w-full h-[52px] rounded-lg pl-6 capitalize;
   }
+
   .input,
   .textarea {
     @apply bg-transparent outline-none focus:ring-1 focus:ring-accent border border-white/20 placeholder:text-white/30 placeholder:font-light;
   }
+
   .textarea {
     @apply w-full h-[180px] p-6 capitalize rounded-lg resize-none;
   }
@@ -52,13 +66,17 @@
 
 @layer utilities {
   @variants responsive {
+
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
       display: none;
     }
+
     .no-scrollbar {
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */
     }
   }
 }
