--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --font-inter: 'Inter', sans-serif;
-}
-
 .translate-z-0 {
   transform: translateZ(0px);
 }
-
-.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
   background-color: #f13024;
 }
 
@@ -22,43 +18,54 @@
   color: #f13024;
 }
 
+.fancy-scroll {
+  -webkit-overflow-scrolling: touch; /* Enables momentum scroll on iOS */
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: #00c6ff transparent;
+}
+
+.fancy-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.fancy-scroll::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #00c6ff, #0072ff);
+  border-radius: 10px;
+}
+
+.fancy-scroll::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+
 @layer base {
   body {
-    @apply bg-background text-foreground;
-    font-family: var(--font-inter);
     @apply bg-secondary overflow-hidden leading-relaxed;
   }
-
   .page {
     @apply w-full h-screen overflow-hidden;
   }
-
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
   }
-
   .h2 {
     @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
   }
-
   p {
     @apply leading-[1.8] text-white/60 font-light;
   }
-
   .btn,
   .input {
     @apply h-[52px];
   }
-
   .input {
     @apply w-full h-[52px] rounded-lg pl-6 capitalize;
   }
-
   .input,
   .textarea {
     @apply bg-transparent outline-none focus:ring-1 focus:ring-accent border border-white/20 placeholder:text-white/30 placeholder:font-light;
   }
-
   .textarea {
     @apply w-full h-[180px] p-6 capitalize rounded-lg resize-none;
   }
@@ -66,17 +73,13 @@
 
 @layer utilities {
   @variants responsive {
-
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
       display: none;
     }
-
     .no-scrollbar {
-      -ms-overflow-style: none;
-      /* IE and Edge */
-      scrollbar-width: none;
-      /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
     }
   }
 }
